--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
         "stripe/stripe-php": "^15.8"
     },
     "require-dev": {
